--- a/config/conky/config
+++ b/config/conky/config
@@ -1,1 +1,62 @@
-/home/ntc/.conkyrc
+conky.config = {
+	use_xft                = true,
+	xftalpha               = 1,
+	update_interval        = 1,
+	total_run_times        = 0,
+
+	background             = true, 
+    out_to_console         = false,
+    out_to_stderr          = false,
+
+	own_window             = true,
+    own_window_class       = 'Conky',
+	own_window_type        = 'override',
+	own_window_argb_visual = true,
+    own_window_transparent = true,
+
+	double_buffer          = true,
+
+	minimum_width          = 440,
+	maximum_width          = 440,
+
+	minimum_height         = 10,
+
+	draw_shades            = false,
+	draw_outline           = false,
+	draw_borders           = false,
+	draw_graph_borders     = true,
+	
+	default_color          = '93A1A1',
+	default_shade_color    = '333333',
+	default_outline_color  = 'black',
+	color1                 = '586E75',
+	color3                 = '586E75',
+
+	alignment              = 'top_right',
+	gap_x                  = 250,
+	gap_y                  = -60,
+	no_buffers             = true,
+	text_buffer_size       = 2048,
+	uppercase              = false,
+	cpu_avg_samples        = 4,
+	net_avg_samples        = 2,
+	override_utf8_locale   = true,
+
+	font                   = 'DejaVu Sans:style=medium:size=10'
+}
+
+conky.text = [[
+
+${voffset -60}
+
+${font Font Awesome 5 Free:style=Regular:size=13} ${font}${font DejaVu Sans:style=bold:size=13}${time %A, %B %d}${font} ${alignr} ${font Font Awesome 5 Free:style=Regular:size=13} ${font}${time %H:%M:%S}
+${font Font Awesome 5 Free:style=Regular:size=13} ${font}${font DejaVu Sans:style=bold:size=13}${uid_name 1000}@${nodename}${font} ${alignr}(${distribution})
+${hr}
+${font Font Awesome 5 Free:style=Solid}${font} ${downspeed wlan0} ${goto 220} ${font Font Awesome 5 Free:style=Solid}${font} ${upspeed wlan0}
+${downspeedgraph wlan0 50,200 6C71C4 6C71C4} ${goto 220} ${upspeedgraph wlan0 50,200 2AA198 2AA198}
+${font Font Awesome 5 Free:style=Solid}${font} ${memperc}% ${goto 220} ${font Font Awesome 5 Free:style=Solid}${font} ${cpu 0}%
+${memgraph 50,200 268BD2 268BD2} ${goto 220} ${cpugraph 0 50,200 859900 859900}
+${font Font Awesome 5 Free:style=Solid}${font} ${alignr} ${battery_time} remaining
+${color CB4B16}${battery_bar 20,440}${color}
+${hr}
+]]
