--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,1 +1,253 @@
-/home/ntc/.config/polybar/config
+[colors]
+base03  = #002b36
+base02  = #073642
+base01  = #586e75
+base00  = #657b83
+base0   = #839496
+base1   = #93a1a1
+base2   = #eee8d5
+base3   = #fdf6e3
+yellow  = #b58900
+orange  = #cb4b16
+red     = #dc322f
+magenta = #d33682
+violet  = #6c71c4
+blue    = #268bd2
+cyan    = #2aa198
+green   = #859900
+none    = #00000000
+background = ${colors.base03}
+border = ${colors.base02}
+background_transparent = #c4002b36
+blue_transparent = #c4268bd2
+background-alt = ${colors.base02}
+foreground = ${colors.base1}
+foreground-alt = ${colors.base0}
+primary = ${colors.blue}
+secondary = ${colors.green}
+alert = ${colors.red}
+
+[global/wm]
+margin-top = 0
+margin-bottom = 0
+
+#-----------------------------------------------------------------------------#
+#----------------------------- Global defaults -------------------------------#
+#-----------------------------------------------------------------------------#
+[section/base]
+monitor = ${env:MONITOR:eDP1}
+enable-ipc = true
+override-redirect = true
+bottom = false
+
+height = 460
+offset-y = -400
+fixed-center = true
+radius = 30
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+border-bottom-color = ${colors.border}
+border-left-color   = ${colors.border}
+border-right-color  = ${colors.border}
+border-bottom-size = 0
+border-left-size = 0
+border-right-size = 0
+
+overline-size = 400
+overline-color = ${colors.background}
+
+spacing = 1
+padding-left = 0
+padding-right = 0
+module-margin-left = 2
+module-margin-right = 2
+
+# Fonts
+# Very large offset to move the text to the bottom of the bar
+font-0 = "DejaVu Sans:style=Bold:pixelsize=18;204"
+font-1 = "DejaVu Sans:pixelsize=18;204"
+font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=24;204"
+font-3 = "Font Awesome 5 Free:style=Regular:pixelsize=24;204"
+font-4 = "Font Awesome 5 Brands:pixelsize=24;204"
+
+
+[bar/full]
+monitor = ${env:MONITOR:eDP1}
+enable-ipc = true
+override-redirect = false
+bottom = false
+
+height = 60
+width = 100%
+offset-y = 0
+fixed-center = true
+spacing = 1
+module-margin-left = 2
+module-margin-right = 2
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+font-0 = "DejaVu Sans:style=Bold:pixelsize=18;4"
+font-1 = "DejaVu Sans:pixelsize=18;4"
+font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=24;4"
+font-3 = "Font Awesome 5 Free:style=Regular:pixelsize=24;4"
+font-4 = "Font Awesome 5 Brands:pixelsize=24;4"
+
+modules-left = i3
+modules-center = xwindow
+modules-right = backlight volume battery date options_open
+padding-right = 2
+
+
+#-----------------------------------------------------------------------------#
+#--------------------------------- Left bar ----------------------------------#
+#-----------------------------------------------------------------------------#
+
+[bar/left]
+inherit = section/base
+width = 32%
+offset-x = -32
+padding-left = 4
+modules-left = i3
+
+#------------------------------- Left modules --------------------------------#
+
+[module/i3]
+type = internal/i3
+format = <label-state> <label-mode>
+
+strip-wsnumbers = true
+
+label-focused = %name%
+label-focused-background = ${colors.primary}
+label-focused-foreground = ${colors.base03}
+label-focused-underline  = ${colors.background-alt}
+label-focused-overline  = ${colors.background}
+label-focused-padding = 2
+
+label-unfocused = %name%
+label-unfocused-padding = 2
+
+label-occupied = %name%
+label-occupied-padding = 1
+
+label-urgent = %name%
+label-urgent-background = ${colors.alert}
+label-urgent-overline  = ${colors.background}
+label-urgent-padding = 2
+
+label-empty = %name%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
+
+index-sort = true
+wrapping-scroll = false
+
+label-mode-padding = 2
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
+
+label-visible = %name%
+label-visible-underline = ${self.label-focused-underline}
+label-visible-padding = ${self.label-focused-padding}
+
+
+#-----------------------------------------------------------------------------#
+#-------------------------------- Center bar ---------------------------------#
+#-----------------------------------------------------------------------------#
+
+[bar/center]
+inherit = section/base
+width = 20%
+offset-x = 40%
+modules-center = xwindow
+
+#------------------------------ Center modules -------------------------------#
+
+[module/xwindow]
+type = internal/xwindow
+label = %{T2}%title:0:30:...%%{T-}
+
+#-----------------------------------------------------------------------------#
+#-------------------------------- Right bar ----------------------------------#
+#-----------------------------------------------------------------------------#
+
+[bar/right]
+inherit = section/base
+padding-right = 7
+width = 32%
+offset-x = 1672
+modules-right = backlight volume battery date options_close
+
+#-----------------------------=- Right modules -------------------------------#
+
+[module/song]
+type = custom/script
+exec = ~/bin/music get_title
+format = "%{T2}<label>%{T-}"
+interval = 3
+
+[module/options_open]
+type = custom/text
+content-foreground = ${colors.foreground}
+content = ""
+click-left = ~/.i3/scripts/polybar_wrapper options
+
+[module/options_close]
+type = custom/text
+content-foreground = ${colors.blue}
+content = ""
+click-left = ~/.i3/scripts/polybar_wrapper options
+
+
+[module/date]
+type = internal/date
+interval = 5
+time = %H:%M
+format-prefix ="  "
+format-prefix-foreground = ${colors.foreground}
+label = "%time% "
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = AC
+full-at = 98
+
+format-charging = "<animation-charging> <label-charging> "
+format-discharging = "<ramp-capacity> <label-discharging> "
+format-full-prefix = "  "
+format-full-prefix-foreground = ${colors.foreground-alt}
+
+ramp-capacity-0 = " "
+ramp-capacity-1 = " "
+ramp-capacity-2 = " "
+ramp-capacity-foreground = ${colors.foreground}
+
+animation-charging-0 = "  "
+animation-charging-1 = "  "
+animation-charging-2 = "  "
+animation-charging-3 = "  "
+animation-charging-4 = "  "
+animation-charging-foreground = ${colors.foreground}
+animation-charging-framerate = 750
+
+[module/volume]
+type = custom/ipc
+hook-0 = $HOME/.i3/scripts/polybar_modules/volume
+scroll-up = $HOME/.i3/scripts/polybar_modules/volume increase
+scroll-down = $HOME/.i3/scripts/polybar_modules/volume decrease
+click-left = $HOME/.i3/scripts/polybar_modules/volume mute
+initial = 1
+
+[module/backlight]
+type = custom/ipc
+format-prefix = " "
+hook-0 = $HOME/.i3/scripts/polybar_modules/backlight
+scroll-up = $HOME/.i3/scripts/polybar_modules/backlight increase
+scroll-down = $HOME/.i3/scripts/polybar_modules/backlight decrease
+initial = 1
+
