--- a/config/rofi/config
+++ b/config/rofi/config
@@ -8,13 +8,13 @@ rofi.color-enabled: true
 rofi.dpi: 0                   ! Autodetect DPI from X11
 rofi.bw: 0                    ! No border
 rofi.width: 18                ! Width as a percentage of total width
-rofi.lines: 11                ! Show 11 lines without scrolling
+rofi.lines: 9                 ! Show 9 lines without scrolling
 rofi.padding: 8               ! 8 pixel padding
-rofi.font: DejaVu Sans 18
+rofi.font: DejaVu Sans 13
 rofi.window-format: {c} {t}
 rofi.color-window: #002B36, argb:00000000, argb:00000000
 
 !                  bg       text     bg alt   hl bg    hl text      
 rofi.color-normal: #002B36, #93A1A1, #002B36, #268BD2, #073642
-rofi.color-active: #859900, #93A1A1, #859900, #268BD2, #073642
+rofi.color-active: #859900, #073642, #859900, #268BD2, #073642
 rofi.color-urgent: #DC322F, #93A1A1, #DC322F, #268BD2, #073642
