--- a/config/conky/config
+++ b/config/conky/config
@@ -16,8 +16,8 @@ conky.config = {
 
 	double_buffer          = true,
 
-	minimum_width          = 440,
-	maximum_width          = 440,
+	minimum_width          = 330,
+	maximum_width          = 330,
 
 	minimum_height         = 10,
 
@@ -33,8 +33,8 @@ conky.config = {
 	color3                 = '586E75',
 
 	alignment              = 'top_right',
-	gap_x                  = 250,
-	gap_y                  = -60,
+	gap_x                  = 200,
+	gap_y                  = -40,
 	no_buffers             = true,
 	text_buffer_size       = 2048,
 	uppercase              = false,
@@ -47,16 +47,19 @@ conky.config = {
 
 conky.text = [[
 
-${voffset -60}
-
-${font Font Awesome 5 Free:style=Regular:size=13} ${font}${font DejaVu Sans:style=bold:size=13}${time %A, %B %d}${font} ${alignr} ${font Font Awesome 5 Free:style=Regular:size=13} ${font}${time %H:%M:%S}
-${font Font Awesome 5 Free:style=Regular:size=13} ${font}${font DejaVu Sans:style=bold:size=13}${uid_name 1000}@${nodename}${font} ${alignr}(${distribution})
+${voffset -40}
 ${hr}
-${font Font Awesome 5 Free:style=Solid}${font} ${downspeed wlan0} ${goto 220} ${font Font Awesome 5 Free:style=Solid}${font} ${upspeed wlan0}
-${downspeedgraph wlan0 50,200 6C71C4 6C71C4} ${goto 220} ${upspeedgraph wlan0 50,200 2AA198 2AA198}
-${font Font Awesome 5 Free:style=Solid}${font} ${memperc}% ${goto 220} ${font Font Awesome 5 Free:style=Solid}${font} ${cpu 0}%
-${memgraph 50,200 268BD2 268BD2} ${goto 220} ${cpugraph 0 50,200 859900 859900}
-${font Font Awesome 5 Free:style=Solid}${font} ${alignr} ${battery_time} remaining
-${color CB4B16}${battery_bar 20,440}${color}
+${font DejaVu Sans:style=bold:size=13}${goto 28}${time %a, %B %d}${alignr}${uid_name 1000}@${nodename}${font}
+${voffset -40}
+${font Font Awesome 5 Free:style=Regular:size=16} ${goto 190} ${font}
+${hr}
+${font Font Awesome 5 Free:style=Solid}${font} ${downspeed wlan0} ${goto 165} ${font Font Awesome 5 Free:style=Solid}${font} ${upspeed wlan0}
+${downspeedgraph wlan0 36,160 6C71C4 6C71C4} ${goto 170} ${upspeedgraph wlan0 36,160 2AA198 2AA198}
+${font Font Awesome 5 Free:style=Solid}${font} ${memperc}% ${goto 170} ${font Font Awesome 5 Free:style=Solid}${font} ${cpu 0}%
+${memgraph 36,160 268BD2 268BD2} ${goto 170} ${cpugraph 0 36,160 859900 859900}
+${hr}
+${font Deja Vu:style=bold:size=16} / ${font}     ${goto 36} ${fs_bar 15,180 /}${alignr}${fs_free /} free
+${font Font Awesome 5 Free:style=Solid} ${font} ${goto 36} ${fs_bar 15,180 /home}${alignr}${fs_free /home} free
+${font Font Awesome 5 Free:style=Solid} ${font} ${goto 36} ${fs_bar 15,180 /mnt/extra_drive}${alignr}${fs_free /mnt/extra_drive} free
 ${hr}
 ]]
