--- a/config/sakura/sakura.conf
+++ b/config/sakura/sakura.conf
@@ -1,10 +1,10 @@
 [sakura]
 colorset1_fore=rgb(0,0,0)
-colorset1_back=rgba(238,232,213,0.99)
+colorset1_back=rgba(238,232,213,0.75)
 colorset1_curs=rgb(0,0,0)
 colorset1_key=F1
 colorset2_fore=rgb(192,192,192)
-colorset2_back=rgba(0,43,54,0.9)
+colorset2_back=rgba(0,43,54,0.85)
 colorset2_curs=rgb(255,255,255)
 colorset2_key=F2
 colorset3_fore=rgb(192,192,192)
@@ -23,9 +23,9 @@ colorset6_fore=rgb(192,192,192)
 colorset6_back=rgb(0,0,0)
 colorset6_curs=rgb(255,255,255)
 colorset6_key=F6
-last_colorset=1
+last_colorset=2
 scroll_lines=4096
-font=DejaVu Sans Mono 15
+font=DejaVu Sans Mono for Powerline 12
 show_always_first_tab=No
 scrollbar=false
 closebutton=true
@@ -37,7 +37,7 @@ audible_bell=No
 blinking_cursor=No
 allow_bold=Yes
 cursor_type=0
-palette=solarized_light
+palette=solarized_dark
 add_tab_accelerator=5
 del_tab_accelerator=5
 switch_tab_accelerator=8
@@ -60,3 +60,9 @@ decrease_font_size_key=minus
 fullscreen_key=F11
 set_colorset_accelerator=5
 icon_file=terminal-tango.svg
+use_fading=false
+scrollable_tabs=true
+stop_tab_cycling_at_end_tabs=No
+word_chars=-,./?%&#_~:
+search_accelerator=5
+search_key=F
